Fix header spacing

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -40,3 +40,12 @@ table {
 .mdi {
   display: flex;
 }
+
+@media (min-width: 1200px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm {
+    max-width: 992px !important;
+  }
+}
